# design_smart_home

./: Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routers/: devices.py
app/api/schemas/: device.py  user.py
app/db/: session.py
app/services/: device_api.py  user_api.py
tests/: alembic.ini  conftest.py
tests/alembic/: env.py
tests/api/routers/: test_device.py
